--- a/Reazioni_avverse_sections/build.gradle
+++ b/Reazioni_avverse_sections/build.gradle
@@ -5,4 +5,6 @@ dependencies {
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "jstl", name: "jstl", version: "1.2"
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
+	compile project(":modules:form_di_segnalazioneservice:form_di_segnalazioneservice-api")
+	compile group: "org.osgi", name:"org.osgi.service.component.annotations", version:"1.3.0"
 }
