Attivita_Formativa_Extra in this project you will get the dynamic query error solution and also in service-build project name suilupposervice in impl classes

--- a/roomservice/roomservice-service/src/main/resources/service.properties
+++ b/roomservice/roomservice-service/src/main/resources/service.properties
@@ -12,7 +12,7 @@
 ## Build
 ##
 
-    build.namespace=suilupposervice
-    build.number=23
-    build.date=1498650120528
+    build.namespace=RoomService
+    build.number=4
+    build.date=1498625403010
     build.auto.upgrade=true
